Pushing latest resume - still in progress

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -67,28 +67,27 @@
                 North Carolina State University, Raleigh, NC, 
                 expected May 2012 \\
                 Concentration: Computer Science \\
-                Minor: Management 
+                Minor: Business Management \\
+                GPA: 3.972
  
  
-\section{\sc Computer \\ Skills} {\sl Languages \& Software:} COBOL, IFPS, Focus, 
-         Megacalc, Pascal, Modula2, C, APL, SNOBOL, 
-                FORTRAN, LISP, SPIRES, BASIC, VSPC Autotab, 
-                IBM 370 Assembler, Lotus 1-2-3. \\
-                {\sl Operating Systems:} MTS, TSO, Unix. 
+\section{\sc Computer \\ Skills} {\sl Languages:} Java, C, Ruby, Python\\
+	       {\sl Software:} Git, Subversion, Apache, Passenger, MySQL, Capistrano, Mongrel, Monit, Chef \\
+                {\sl Operating Systems:} Windows, Windows Server (previous experience with Small Business Server 2003), OSX, Linux (Primarily Debian-based distributions), Xen, VMWare Server ESXi. \\
+                {\sl Development Styles:} Experienced in both waterfall and agile development methodologies.
  
-\section{\sc Experience} {\sl Business Applications Programmer} \hfill Fall 1990 \\
-                Allied-Signal Bendix Friction Materials Division, 
-                Financial Planning Department, Latham, NY 
+\section{\sc Experience} {\sl Junior Developer/IT Intern} \hfill Summer 2008 - Spring 2010 \\
+		Futures Inc., Durham, NC
                  \begin{itemize}  \itemsep -2pt %reduce space between items
-                 \item Developed four ``user friendly" forecasting 
-                    systems each of which produces 18 to 139 
-                    individual reports. 
-                \item   Developed or improved almost all IFPS 
-                    programs used for financial reports. 
+                 \item Aided in the design, and provided the implementation and support of a large scale (10,000+ initial users) server environment housing a rich internet web application. 
+                \item   Solely responsible for office network hardware, installation and support.  
+
+	     \item Continually assessed the needs of the rapidly growing organization in order to ensure high availability and reliability. 
+	     \item Gained software development experience via the completion of individual projects.
                 \end{itemize}
  
-                {\sl Research Programmer} \hfill            Summer 1990 \\
-                Psychology Department, Rensselaer Polytechnic 
+                {\sl Network Cabling Apprentice} \hfill            Summer 2007 \\
+                Trident Technology Solutions
                 Institute 
                  \begin{itemize}  \itemsep -2pt %reduce space between items
                  \item Performed computer aided statistical analysis 
