Updated resume to current

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -19,9 +19,10 @@
 % FONTS
 % FONTS
 \defaultfontfeatures{Mapping=tex-text} % converts LaTeX specials (``quotes'' --- dashes etc.) to unicode
-\setromanfont [Ligatures={Common},Numbers={OldStyle}]{Adobe Caslon Pro}
-\setmonofont[Scale=0.8]{Monaco} 
-\setsansfont[Scale=0.9]{Optima Regular} 
+
+% Remove % to set to different fonts
+%\setromanfont [Ligatures={Common},Numbers={OldStyle}]{Adobe Caslon Pro}
+%\setmonofont[Scale=0.8]{Monaco} 
 
 % ---- CUSTOM AMPERSAND
 \newcommand{\amper}{{\fontspec[Scale=.95]{Adobe Caslon Pro}\selectfont\itshape\&}}
@@ -54,10 +55,11 @@
  \moveleft.5\hoffset\centerline{9500 Kingsford Dr.}
  \moveleft.5\hoffset\centerline{Cary, NC 27518}
  \moveleft.5\hoffset\centerline{(919) 656-4962}
+ \moveleft.5\hoffset\centerline{mdwrigh2@ncsu.edu}
  
  \begin{resume}
  
-\section{\sc Objective}   
+\section{\sc Objective} To further myself as a computer scientist and programmer by participating in the architecture and development of interesting software projects and research.
  
 
 \section{\sc Education} {\sl Bachelor of Science,} \\
@@ -66,47 +68,50 @@
 		      %	Computer Modern (default) font
                 North Carolina State University, Raleigh, NC, 
                 expected May 2012 \\
-                Concentration: Computer Science \\
-                Minor: Business Management \\
-                GPA: 3.972
+                Concentration: Computer Science and Mathematics \\
+                GPA: 3.994 \\
+                CSC GPA: 4.0 \\
+                MA GPA: 4.0
+\section{\sc Relevant \\ Courses} Operating Systems \\
+                                  Data Structures and Algorithms \\
+                                  C and Software Tools \\
+                                  Software Engineering
  
  
-\section{\sc Computer \\ Skills} {\sl Languages:} Java, C, Ruby, Python\\
-	       {\sl Software:} Git, Subversion, Apache, Passenger, MySQL, Capistrano, Mongrel, Monit, Chef \\
-                {\sl Operating Systems:} Windows, Windows Server (previous experience with Small Business Server 2003), OSX, Linux (Primarily Debian-based distributions), Xen, VMWare Server ESXi. \\
+\section{\sc Computer \\ Skills} {\sl Languages:} Ruby, C, Python, Java\\
+	       {\sl Software:} Git, Subversion, Apache, Passenger, MySQL, Capistrano, Mongrel, Monit, Chef, \LaTeX \\
+                {\sl Operating Systems:} Windows, Windows Server (previous experience with Small Business Server 2003), OS X, Linux (Primarily Debian-based distributions), Xen, VMWare Server ESXi. \\
                 {\sl Development Styles:} Experienced in both waterfall and agile development methodologies.
  
-\section{\sc Experience} {\sl Junior Developer/IT Intern} \hfill Summer 2008 - Spring 2010 \\
+\section{\sc Experience} 
+    {\sl Research Assistant} \hfill Summer 2010 - Current \\
+    North Carolina State University
+    With Dr. Jiang and the Systems Security Group
+    \begin{itemize} \itemsep -2pt % reduce space between items
+      \item 
+    \end{itemize}
+    {\sl Junior Developer/IT Intern} \hfill Summer 2008 - Spring 2010 \\
 		Futures Inc., Durham, NC
-                 \begin{itemize}  \itemsep -2pt %reduce space between items
-                 \item Aided in the design, and provided the implementation and support of a large scale (10,000+ initial users) server environment housing a rich internet web application. 
-                \item   Solely responsible for office network hardware, installation and support.  
+    \begin{itemize}  \itemsep -2pt %reduce space between items
+        \item Aided in the design, and provided the implementation and support of a large scale (10,000+ initial users), Xen-virtualized server environment housing a rich internet web application.
+        \item   Solely responsible for office network hardware, installation and support.  
 
-	     \item Continually assessed the needs of the rapidly growing organization in order to ensure high availability and reliability. 
-	     \item Gained software development experience via the completion of individual projects.
-                \end{itemize}
+	      \item Continually assessed the needs of the rapidly growing organization in order to ensure high availability and reliability. 
+	      \item Gained software development experience via the completion of individual projects.
+        \item Aided in the transfer from rented hardware running Xen instances, to
+              Engine Yard's Amazon EC2-based cloud computing service.
+    \end{itemize}
+    {\sl Network Cabling Apprentice} \hfill            Summer 2007 \\
+    Trident Technology Solutions
+    \begin{itemize}  \itemsep -2pt %reduce space between items
+      \item Built server racks, mounted cable trays, and ran cables within newly built data centers.
+    \end{itemize} 
  
-                {\sl Network Cabling Apprentice} \hfill            Summer 2007 \\
-                Trident Technology Solutions
-                Institute 
-                 \begin{itemize}  \itemsep -2pt %reduce space between items
-                 \item Performed computer aided statistical analysis 
-                    of data. 
-                 \end{itemize} 
-                {\sl Assistant Manager} \hfill        Summers 1988-89 \\
-                Thunder Restaurant, Canton, CT
-                  \begin{itemize}
-                   \item Recognized need for, developed, and wrote 
-                    employee training manual. Performed various 
-                    duties including cooking, employee training, 
-                    ordering, and inventory control. 
-                   \end{itemize} 
- 
-\section{\sc Honors}  Organized and directed the 1988 and 1989 Grand 
-                 Marshall Week \newline ``Basketball Marathon.'' A 24 hour 
-                charity event to benefit the Troy Boys Club. Over 
-                250 people participated each year. 
-
+\section{\sc Honors}
+  Volunteer for CarolinaCon, a regional technology conference from 2005 - 2007\\
+  Dean's List all semesters
+  Active Member of the NCSU Linux User Group
+  Contributor to open source projects - see http://github.com/mdwrigh2
 
  
 
