Finished old style resume

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -70,17 +70,15 @@
                 expected May 2012 \\
                 Concentration: Computer Science and Mathematics \\
                 GPA: 3.994 \\
-                CSC GPA: 4.0 \\
-                MA GPA: 4.0
+                CSC \& MA GPA: 4.0 \\
 \section{\sc Relevant \\ Courses} Operating Systems \\
                                   Data Structures and Algorithms \\
                                   C and Software Tools \\
-                                  Software Engineering
  
  
 \section{\sc Computer \\ Skills} {\sl Languages:} Ruby, C, Python, Java\\
-	       {\sl Software:} Git, Subversion, Apache, Passenger, MySQL, Capistrano, Mongrel, Monit, Chef, \LaTeX \\
-                {\sl Operating Systems:} Windows, Windows Server (previous experience with Small Business Server 2003), OS X, Linux (Primarily Debian-based distributions), Xen, VMWare Server ESXi. \\
+	       {\sl Software:} Git, Subversion, Apache, MySQL, Capistrano, Mongrel, Monit, Chef, \LaTeX \\
+                {\sl Operating Systems:} Linux (Primarily Debian-based distrobutions), OS X, Windows, Xen, VMWare Server ESXi. \\
                 {\sl Development Styles:} Experienced in both waterfall and agile development methodologies.
  
 \section{\sc Experience} 
@@ -88,15 +86,13 @@
     North Carolina State University
     With Dr. Jiang and the Systems Security Group
     \begin{itemize} \itemsep -2pt % reduce space between items
-      \item 
+      \item Developed a framework to interpose advertisements interaction with webpages.
+      \item Gave presentations on papers and research proposals to the Systems Security group
     \end{itemize}
     {\sl Junior Developer/IT Intern} \hfill Summer 2008 - Spring 2010 \\
 		Futures Inc., Durham, NC
     \begin{itemize}  \itemsep -2pt %reduce space between items
         \item Aided in the design, and provided the implementation and support of a large scale (10,000+ initial users), Xen-virtualized server environment housing a rich internet web application.
-        \item   Solely responsible for office network hardware, installation and support.  
-
-	      \item Continually assessed the needs of the rapidly growing organization in order to ensure high availability and reliability. 
 	      \item Gained software development experience via the completion of individual projects.
         \item Aided in the transfer from rented hardware running Xen instances, to
               Engine Yard's Amazon EC2-based cloud computing service.
@@ -104,13 +100,13 @@
     {\sl Network Cabling Apprentice} \hfill            Summer 2007 \\
     Trident Technology Solutions
     \begin{itemize}  \itemsep -2pt %reduce space between items
-      \item Built server racks, mounted cable trays, and ran cables within newly built data centers.
+      \item Built server racks, mounted cable trays, and ran network cables within newly built data centers.
     \end{itemize} 
  
-\section{\sc Honors}
+\section{\sc Extra}
   Volunteer for CarolinaCon, a regional technology conference from 2005 - 2007\\
-  Dean's List all semesters
-  Active Member of the NCSU Linux User Group
+  Dean's List every semester\\
+  Active Member of the NCSU Linux User Group\\
   Contributor to open source projects - see http://github.com/mdwrigh2
 
  
