Updated some of the wording on my resume

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -48,7 +48,7 @@
 \address{9500 Kingsford Dr.}{Cary, NC 27518}
 \mobile{(919) 656-4962}
 \email{mdwrigh2@ncsu.edu}
-\homepage{http://www.derefnull.com}
+\homepage{http://www.derefnull.com/about}
 
 \title{Michael Wright's Resume}
 
