Fix spelling error: distrobutions -> distributions

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -69,7 +69,7 @@
 \section{Computer Skills} 
   \cvline{Languages:}{Ruby, C, Python, Java}
   \cvline{Software:}{Git, Subversion, Apache, MySQL, Capistrano, Mongrel, Monit, Chef, \LaTeX}
-  \cvline{Operating Systems:}{Linux (Primarily Debian-based distrobutions), OS X, Windows, Xen, VMWare Server ESXi}
+  \cvline{Operating Systems:}{Linux (Primarily Debian-based distributions), OS X, Windows, Xen, VMWare Server ESXi}
   \cvline{Development Styles:}{Experienced in both waterfall and agile development methodologies}
 \section{Experience} 
   \cventry{2010--Current}{Research Assistant}{Dr. Jiang, NCSU}{Raleigh, NC}{}{
