--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -60,7 +60,7 @@
 \section{Objective} To further myself as a computer scientist and programmer by participating in the architecture and development of interesting software projects and research.
 
 \section{Education}
-  \cventry{2008-2012 (expected)}{Computer Science \& Mathematics, NCSU}{Raleigh, NC}{}{3.994 Overall GPA}{CSC \& MA Majors GPA: 4.0}
+  \cventry{2008-2012 (expected)}{Computer Science \& Mathematics, NCSU}{Raleigh, NC}{}{3.974 Overall GPA}{CSC \& MA Majors GPA: 4.0}
   \cvline{Relevant Courses:}{Operating Systems, Data Structures and Algorithms, Computer Algebra}
 %\section{Relevant Courses} 
 %  \cvlistitem{Operating Systems}
@@ -69,7 +69,7 @@
 \section{Computer Skills} 
   \cvline{Languages:}{Ruby, C, Python, Java}
   \cvline{Software:}{Git, Subversion, Apache, MySQL, Capistrano, Mongrel, Monit, Chef, \LaTeX}
-  \cvline{Operating Systems:}{Linux (Primarily Debian-based distributions), OS X, Windows, Xen, VMWare Server ESXi}
+  \cvline{Operating Systems:}{Linux (Primarily Debian-based distributions), OS X, Windows, Xen, VMWare ESXi}
   \cvline{Development Styles:}{Experienced in both waterfall and agile development methodologies}
 \section{Experience} 
   \cventry{2010--Current}{Research Assistant}{Dr. Jiang, NCSU}{Raleigh, NC}{}{
