Updated relevant classes

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -61,7 +61,7 @@
 
 \section{Education}
   \cventry{2008-2012 (expected)}{Computer Science \& Mathematics, NCSU}{Raleigh, NC}{}{3.974 Overall GPA}{CSC \& MA Majors GPA: 4.0}
-  \cvline{Relevant Courses:}{Operating Systems, Data Structures and Algorithms, Computer Algebra}
+  \cvline{Relevant Courses:}{Operating Systems, Data Structures, Computer Algebra (Graduate), Compilers (Graduate)}
 %\section{Relevant Courses} 
 %  \cvlistitem{Operating Systems}
 %  \cvlistitem{Data Structures and Algorithms}
