Updated time frame with Jiang

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -72,7 +72,7 @@
   \cvline{Operating Systems:}{Linux (Primarily Debian-based distributions), OS X, Windows, Xen, VMWare ESXi}
   \cvline{Development Styles:}{Experienced in both waterfall and agile development methodologies}
 \section{Experience} 
-  \cventry{2010--Current}{Research Assistant}{Dr. Jiang, NCSU}{Raleigh, NC}{}{
+  \cventry{Summer 2010--\\January 2011}{Research Assistant}{Dr. Jiang, NCSU}{Raleigh, NC}{}{
     %{Research Assistant} \hfill Summer 2010 - Current \\
     %North Carolina State University
     %With Dr. Jiang and the Systems Security Group
@@ -100,5 +100,5 @@
   \cvlistitem{Volunteer for CarolinaCon, a regional technology conference from 2005 - 2007}
   \cvlistitem{Dean's List every semester}
   \cvlistitem{Active Member of the NCSU Linux User Group}
-  \cvlistitem{Contributor to open source projects - see http://github.com/mdwrigh2}
+  \cvlistitem{Contributor to open source projects - see \url{http://github.com/mdwrigh2}}
 \end{document}
