Added Google and cleaned up some of the source

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -62,36 +62,26 @@
 \section{Education}
   \cventry{2008-2012 (expected)}{Computer Science \& Mathematics, NCSU}{Raleigh, NC}{}{3.974 Overall GPA}{CSC \& MA Majors GPA: 4.0}
   \cvline{Relevant Courses:}{Operating Systems, Data Structures, Computer Algebra (Graduate), Compilers (Graduate)}
-%\section{Relevant Courses} 
-%  \cvlistitem{Operating Systems}
-%  \cvlistitem{Data Structures and Algorithms}
-%  \cvlistitem{C and Software Tools}
-\section{Computer Skills} 
-  \cvline{Languages:}{Ruby, C, Python, Java}
+
+\section{Computer Skills}
+  \cvline{Languages:}{Python, Java, Ruby, C}
   \cvline{Software:}{Git, Subversion, Apache, MySQL, Capistrano, Mongrel, Monit, Chef, \LaTeX}
   \cvline{Operating Systems:}{Linux (Primarily Debian-based distributions), OS X, Windows, Xen, VMWare ESXi}
-  \cvline{Development Styles:}{Experienced in both waterfall and agile development methodologies}
-\section{Experience} 
-  \cventry{Summer 2010--\\January 2011}{Research Assistant}{Dr. Jiang, NCSU}{Raleigh, NC}{}{
-    %{Research Assistant} \hfill Summer 2010 - Current \\
-    %North Carolina State University
-    %With Dr. Jiang and the Systems Security Group
+\section{Experience}
+  \cventry{Summer 2011}{Technical Solutions Engineering Intern}{Google}{Mountain View, CA}{} {
+    \begin{itemize}
+  }
+  \cventry{Summer 2010--\\January 2011}{Research Professional}{Dr. Jiang, NCSU}{Raleigh, NC}{}{
     \begin{itemize}% \itemsep -2pt % reduce space between items
       \item Developed a framework to interpose advertisement's interaction with webpages.
       \item Gave presentations on papers and research proposals to the Systems Security group.
     \end{itemize}}
-  \cventry{2008--2010}{Jr. Developer/IT Intern}{Futures, Inc.}{Durham, NC}{}{
-    %{Junior Developer/IT Intern} \hfill Summer 2008 - Spring 2010 \\
-		%Futures Inc., Durham, NC
+  \cventry{Summer 2008--\\Spring 2010}{Jr. Developer/IT Intern}{Futures, Inc.}{Durham, NC}{}{
     \begin{itemize}%  \itemsep -2pt %reduce space between items
         \item Aided in the design, and provided the implementation and support of a large scale (10,000+ initial users), Xen-virtualized server environment housing a rich internet web application.
-	      \item Gained software development experience via the completion of individual projects.
-        \item Aided in the transfer from rented hardware running Xen instances, to
-              Engine Yard's Amazon EC2-based cloud computing service.
+        \item Gained software development experience via the completion of individual projects.
     \end{itemize}}
   \cventry{Summer 2007}{Network Cabling Apprentice}{Trident Technology Solutions}{Raleigh, NC}{}{
-    %{Network Cabling Apprentice} \hfill            Summer 2007 \\
-    %Trident Technology Solutions
     \begin{itemize}%  \itemsep -2pt %reduce space between items
       \item Built server racks, mounted cable trays, and ran network cables within newly built data centers.
     \end{itemize} }
