Updated Google section to leave it in a compilable state

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -70,6 +70,8 @@
 \section{Experience}
   \cventry{Summer 2011}{Technical Solutions Engineering Intern}{Google}{Mountain View, CA}{} {
     \begin{itemize}
+        \item Done stuff
+    \end{itemize}
   }
   \cventry{Summer 2010--\\January 2011}{Research Professional}{Dr. Jiang, NCSU}{Raleigh, NC}{}{
     \begin{itemize}% \itemsep -2pt % reduce space between items
