Fixed punctutation, expanded unclear acronyms

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -52,7 +52,7 @@
 
 \maketitle
 \section{Education}
-\cventry{2008-2012 (expected)}{Computer Science \& Mathematics, NCSU}{Raleigh, NC}{}{Overall GPA: 3.974}{CSC \& MA Majors GPA: 4.0}
+\cventry{2008-2012 (expected)}{Computer Science \& Mathematics, North Carolina State University}{Raleigh, NC}{}{Overall GPA: 3.974}{CSC \& MA Majors GPA: 4.0}
 \section{Computer Skills} 
   \cvline{Languages:}{Python, Java, Ruby, JavaScript, C}
   \cvline{Software:}{Git, Subversion, Apache, MySQL, Chef, \LaTeX}
@@ -65,7 +65,7 @@
       \item Added view introspection functionality to Monkey, ChimpChat and MonkeyRunner.
       \item Refactored the Android Partner Frontend device display page to utilize a different backend 
       and added pagination to it and the search results page.
-      \item Worked on an SFTP server backed by Google technologies and infrastructure, improving read performance by 4x and implementing proper access control
+      \item Worked on an SFTP server backed by Google technologies and infrastructure, improving read performance by 4x and implementing proper access control.
     \end{itemize}
   }
   \cventry{May 2010 --\\January 2011}{Research Professional}{Dr. Jiang, NCSU}{Raleigh, NC}{}{
@@ -89,5 +89,5 @@
   \cvlistitem{Contributor to open source projects - see \url{https://github.com/mdwrigh2}}
   \cvlistitem{Vice President of the NCSU Linux User Group}
   \cvlistitem{Google Student Ambassador}
-  \cvlistitem{Volunteer for CarolinaCon, a regional technology conference from 2005 - 2007}
+  \cvlistitem{Volunteer for CarolinaCon, a regional technology conference, from 2005 - 2007}
 \end{document}
