Removed homepage until I set everything back up

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -42,7 +42,7 @@
 \address{9500 Kingsford Dr.}{Cary, NC 27518}
 \mobile{(919) 656-4962}
 \email{mdwrigh2@ncsu.edu}
-\homepage{www.derefnull.com/about}
+%\homepage{www.derefnull.com/about}
 
 \title{Michael Wright's Resume}
 
