Added ICPC and IEEExtreme results to resume

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -89,5 +89,7 @@
   \cvlistitem{Contributor to open source projects - see \url{https://github.com/mdwrigh2}}
   \cvlistitem{Vice President of the NCSU Linux User Group}
   \cvlistitem{Google Student Ambassador}
+  \cvlistitem{Top 50 in the world in the IEEExtreme Programming Competition 2010}
+  \cvlistitem{2nd on-site, 16th for the region at ACM ICPC 2010}
   \cvlistitem{Volunteer for CarolinaCon, a regional technology conference, from 2005 - 2007}
 \end{document}
