Added objective and updated pdf

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -51,6 +51,9 @@
 \begin{document}
 
 \maketitle
+\section{Objective}
+To push the envelope of technology by working on the most important platform yet, mobile.\\
+
 \section{Education}
 \cventry{2008-2012 (expected)}{Computer Science \& Mathematics, North Carolina State University}{Raleigh, NC}{}{Overall GPA: 3.974}{CSC \& MA Majors GPA: 4.0}
 \section{Computer Skills} 
