Updated expected graduation and tweaked objective

--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -51,11 +51,11 @@
 \begin{document}
 
 \maketitle
-\section{Objective}
-To push the envelope of technology by working on the most important platform yet, mobile.\\
+%\section{Objective}
+%To push the envelope of technology by working on the most important platform yet, mobile.\\
 
 \section{Education}
-\cventry{2008-2012 (expected)}{Computer Science \& Mathematics, North Carolina State University}{Raleigh, NC}{}{Overall GPA: 3.974}{CSC \& MA Majors GPA: 4.0}
+\cventry{Fall 2008 - Winter 2012 (expected)}{Computer Science \& Mathematics, North Carolina State University}{Raleigh, NC}{}{Overall GPA: 3.974}{CSC \& MA Majors GPA: 4.0}
 \section{Computer Skills} 
   \cvline{Languages:}{Python, Java, Ruby, JavaScript, C}
   \cvline{Software:}{Git, Subversion, Apache, MySQL, Chef, \LaTeX, Xen}
