--- a/mwright-resume.tex
+++ b/mwright-resume.tex
@@ -61,6 +61,13 @@
   \cvline{Software:}{Git, Subversion, Apache, MySQL, Chef, \LaTeX, Xen}
   \cvline{Operating Systems:}{Linux (Primarily Debian-based distributions), OS X, Windows}
 \section{Experience} 
+  \cventry{Fall 2011}{Senior Design Team Lead}{Johns Hopkins University Applied Physics Lab}{}{}{
+    \begin{itemize}
+      \item Developed a library for seamlessly interacting with Flicker, a project that allows for running trusted code modules on top of an extremely small trusted computing base.
+      \item Implemented modules that wrap Intel's Trusted Platform Module's sealing and unsealing functionality.
+      \item Developed modules that implement RSA and a corresponding arbitrary precision math library which do not depend on libc.
+    \end{itemize}
+  }
   \cventry{Summer 2011}{Technical Solutions Engineering Intern}{Google}{Mountain View, CA}{}{
     \begin{itemize}
       \item Extracted ChimpChat, a Java library for interfacing with the Monkey testing tool, from
@@ -83,16 +90,9 @@
 	      \item Developed a custom continuous integration server that interfaced with our git repositories.
     \end{itemize}
   }
-  \cventry{Summer 2007}{Network Cabling Apprentice}{Trident Technology Solutions}{Raleigh, NC}{}{
-    \begin{itemize}%  \itemsep -2pt %reduce space between items
-      \item Built server racks, mounted cable trays, and ran network cables within newly built data centers.
-    \end{itemize}
-  }
 \section{Extra}
   \cvlistitem{Contributor to open source projects - see \url{https://github.com/mdwrigh2}}
-  \cvlistitem{Vice President of the NCSU Linux User Group}
+  \cvlistitem{President of the NCSU Linux User Group}
   \cvlistitem{Google Student Ambassador}
-  \cvlistitem{Top 50 in the world in the IEEExtreme Programming Competition 2010}
-  \cvlistitem{2nd on-site, 16th for the region at ACM ICPC 2010}
   \cvlistitem{Volunteer for CarolinaCon, a regional technology conference, from 2005 - 2007}
 \end{document}
